--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 		<!-- Custom styles for this template -->
-		<link href="css/clean-blog.css" rel="stylesheet">
+		<link href="css/clean-blog.min.css" rel="stylesheet">
 
 	</head>
 
@@ -39,7 +39,7 @@
 					<div class="col-lg-8 col-md-10 mx-auto">
 						<div class="site-heading">
 							<h1>Alice in Wonderland</h1>
-							<span class="subheading">My personal blog of tech and life.</span>
+							<span class="subheading">My personal blog of <text id="dynamic-text"></text></span>
 						</div>
 					</div>
 				</div>
@@ -54,24 +54,12 @@
 				<!-- Blog Entries Column -->
 				<div class="col-md-8">
 
-					<h1 class="my-4">Page Heading
-						<small>Secondary Text</small>
+					<h1 class="my-4">Blog Posts
+						<!-- <small>Secondary Text</small> -->
 					</h1>
-					
-					
 
-					<!-- Blog Post -->
-					<div class="card mb-4">
-						<img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-						<div class="card-body">
-							<h2 class="card-title">Post Title</h2>
-							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-							<a href="#" class="btn btn-primary">Read More &rarr;</a>
-						</div>
-						<div class="card-footer text-muted">
-							Posted on January 1, 2017 by
-							<a href="#">Start Bootstrap</a>
-						</div>
+					<div id="card-list-placeholder">
+          					<h5 class="title" id="loading-txt">Loading...</h4>
 					</div>
 
 					<!-- Pagination -->
@@ -93,11 +81,11 @@
 					<div class="card my-4">
 						<h5 class="card-header">Search</h5>
 						<div class="card-body">
-							<div class="input-group">
-								<input type="text" class="form-control" placeholder="Search for...">
-								<span class="input-group-btn">
-									<button class="btn btn-secondary" type="button">Go!</button>
-								</span>
+							<div class="input-group mb-3">
+								<input type="text" class="form-control" placeholder="Search for ...">
+								<div class="input-group-append">
+									<button class="icon"><i class="fa fa-search"></i></button>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -177,6 +165,28 @@
 
 		<!-- Custom scripts for this template -->
 		<script src="js/clean-blog.min.js"></script>
+
+		<!-- dynamic typing -->
+		<script src = "js/typed.min.js"></script>
+		<script>
+		  $(function(){ 
+		    $("#dynamic-text").typed({
+		      strings: ["tech.", "bitcoin.", "doggy.", "yoga.", "life."],
+		      typeSpeed: 150,
+		      startDelay: 10,
+		      showCursor: true,
+		      shuffle: true,
+		      loop:true
+		    });
+		  });
+		</script>
+
+		<!-- Posts -->
+		<script src="js/blog-post.js"></script>
+		<script>
+			load_card();
+			// dummy();
+		</script>
 
 	</body>
 
