--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
@@ -27,29 +28,7 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Maegan Jong</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
 
-          <li class="nav-item dropdown">
-            <a class="nav-link" href="post.html" >Writing</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-        </ul>
-      </div>
-    </div>
   </nav>
 
   <!-- Page Header
@@ -71,29 +50,32 @@
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1" ></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
       <!-- Slide One - Set the background image for this slide in the line below -->
       <div class="carousel-item active" style="background-image: url('img/nb-jo.jpg')">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="display-4">First Slide</h3>
-          <p class="lead">This is a description for the first slide.</p>
+          <!--<h3 class="display-4"></h3>
+          <p class="lead">This is a description for the first slide.</p> -->
+          <h6 href="#" class="w3-xxlarge w3-button w3-white w3-border w3-round-large">Nomi Bobi</h6>
         </div>
       </div>
       <!-- Slide Two - Set the background image for this slide in the line below -->
-      <div class="carousel-item" style="background-image: url('img/tc-lg.jpg')">
+      <div class="carousel-item" style="background-image: url('img/c211-lg.jpg')">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="display-4">Second Slide</h3>
-          <p class="lead">This is a description for the second slide.</p>
+          <!--<h3 class="display-4">Code211</h3>
+          <p class="lead">This is a description for the third slide.</p> -->
+          <h6 href="#" class="w3-xxlarge w3-button w3-white w3-border w3-round-large">Code211</h6>
         </div>
       </div>
       <!-- Slide Three - Set the background image for this slide in the line below -->
-      <div class="carousel-item" style="background-image: url('https://source.unsplash.com/O7fzqFEfLlo/1920x1080')">
+      <div class="carousel-item" style="background-image: url('img/tc-lg.jpg')">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="display-4">Third Slide</h3>
-          <p class="lead">This is a description for the third slide.</p>
+          <!--<h3 class="display-4">Teaching Chinese</h3>
+          <p class="lead">This is a description for the second slide.</p> -->
+          <h6 href="#" class="w3-xxlarge w3-button w3-white w3-border w3-round-large">Teaching Chinese</h6>
         </div>
       </div>
     </div>
@@ -114,7 +96,7 @@
 
   <!-- Footer -->
   <footer id="footer">
-    
+
   </footer>
 
   <!-- Bootstrap core JavaScript -->
