Add images & format

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Maegan Jong</title>
+  <title>About - Maegan Jong</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,8 +23,8 @@
 
 </head>
 
-<body>
 
+<body>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   </nav>
@@ -35,7 +35,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>About</h1>
+            <h1></h1>
           </div>
         </div>
       </div>
@@ -62,8 +62,11 @@
       <img class="img-fluid img" src="img/mj.jpg" alt="">
     </div>
 
-    <div class="col-md-6 text">
-      <p>My name is Maegan Jong! Hello. </p>
+    <div class="col-md-5 text">
+      <p>Maegan is a current <strong>student</strong> at <a href="https://harvard.edu/" target = "_blank">Harvard University</a>. In 2016, Maegan founded the mental health nonprofit Nomi Bobi. Through sales of handmade Nomi Owl decorations, she has raised funds to support both the mental health organizations in the US and the artists in Taiwan who made them.</p>
+      <p>Maegan grew her impact and brought mental health awareness to her high school. Collaborating with high school administrators, she initiated and organized a schoolwide Mental Health Presentation Day event for over 2,700 high school students.</p>
+      <p>She further contributed to the mental health cause by conducting research. During her time at Texas Tech University as a Clark Scholar, Maegan determined the effects of social context on the behavior of individuals with anxiety. She looks forward to continue advancing her work.</p>
+      <p>Leading her district’s annual Code211--a computer science education and hackathon event--and teaching Mandarin to senior citizens at a local retirement center, Maegan is also committed to spreading knowledge for the benefit of her community.</p>
     </div>
 
   </div>
