Service items made

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 </head>
 
 
-<body>
+
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   </nav>
@@ -35,7 +35,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1></h1>
+            <h1 class="title"></h1>
           </div>
         </div>
       </div>
@@ -53,23 +53,48 @@
   </div>
 
   <hr> -->
-
+<body>
   <!-- Main Content -->
 
   <div class="row">
 
     <div class="col-md-6">
-      <img class="img-fluid img" src="img/mj.jpg" alt="">
+      <img id = "face" class="img-fluid img" src="img/mj.jpg" alt="">
     </div>
 
     <div class="col-md-5 text">
-      <p>Maegan is a current <strong>student</strong> at <a href="https://harvard.edu/" target = "_blank">Harvard University</a>. In 2016, Maegan founded the mental health nonprofit Nomi Bobi. Through sales of handmade Nomi Owl decorations, she has raised funds to support both the mental health organizations in the US and the artists in Taiwan who made them.</p>
-      <p>Maegan grew her impact and brought mental health awareness to her high school. Collaborating with high school administrators, she initiated and organized a schoolwide Mental Health Presentation Day event for over 2,700 high school students.</p>
-      <p>She further contributed to the mental health cause by conducting research. During her time at Texas Tech University as a Clark Scholar, Maegan determined the effects of social context on the behavior of individuals with anxiety. She looks forward to continue advancing her work.</p>
-      <p>Leading her district’s annual Code211--a computer science education and hackathon event--and teaching Mandarin to senior citizens at a local retirement center, Maegan is also committed to spreading knowledge for the benefit of her community.</p>
+      <h3 class="title">About Maegan Jong</h3>
+      <div class = "content">
+      <p>Maegan is currently a first-year student at <a href="https://harvard.edu/" target = "_blank">Harvard University</a>. She is interested in leveraging technology and data to create lasting change. Her love for service developed throughout her time in high school.</p>
+
+      <p>In 2016, Maegan founded the mental health nonprofit <a href="https://nomibobi.com" target = "_blank">Nomi Bobi</a> and began her mental health advocacy efforts. Through sales of handmade Nomi Owl decorations, she raised funds to support both mental health organizations in the US and the artists in Taiwan who made them. Maegan soon grew her impact and brought mental health awareness to her high school. Collaborating with administrators, she initiated and organized a schoolwide Mental Health Presentation Day event for over 2,700 high school students. She further contributed to the cause by conducting research. During her time at Texas Tech University as a <a href="http://www.depts.ttu.edu/honors/academicsandenrichment/affiliatedandhighschool/clarks/2018Scholars/index.php" target = "_blank">Clark Scholar</a>, Maegan determined the effects of social context on the behavior of individuals with anxiety.</p>
+
+      <p>Maegan is also passionate about promoting computer science education. Leading her district’s second annual <a href="https://code211.org" target = "_blank">Code211</a> hackathon and workshops, Maegan coordinated over 20 student representatives and collaborated with high school administrators to make the event a reality. Over 100 students across the five schools attended.</p>
+
+      <p>Committed to spreading knowledge for the benefit of her community, Maegan designed and taught a Chinese language and culture curriculum for seniors at a local retirement center. Featured in <a href="https://www.dailyherald.com/article/20161010/submitted/161019910/" target = "_blank"><i>Daily Herald</i></a> and <a href="https://patch.com/illinois/arlingtonheights/amp/26716429/teaching-and-learning-at-all-ages-friendship-village-residents-learn-mandarin-from-teenage-instructo" target = "_blank"><i>Patch</i></a>, Maegan grew closer to not only her students but also her heritage.</p>
+
+      <p>In her free time, Maegan can be found coding recreationally, testing recipes, and getting lost in nature.</p>
+
+    </div>
     </div>
 
   </div>
+
+  <header class="masthead" >
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="page-heading">
+            <h3 class="title">Awards</h3>
+            <div class="col-md-12 content">
+            <p>Maegan has been recognized for her achievements by <a href="https://www.ed.gov/news/press-releases/161-students-across-country-named-2019-us-presidential-scholars" target = "_blank">U.S. Presidential Scholars</a>, <a href="https://us.axa.com/axa-foundation/axa-achievement-2019-winners.html" target = "_blank">AXA Achievement</a>, National Merit Finalist, Lockheed Martin STEM, Elks Most Valuable Student, Northrop Grumman Engineering Scholars, <a href="https://www.dailyherald.com/news/20190307/northwest-suburban-leadership-team-2018-2019" target = "_blank"><i>Daily Herald</i> Leadership Team</a>, <i>Daily Herald</i> Academic Team, and Clark Scholars Program.</p>
+          </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
 
   <!-- Footer -->
   <footer id="footer">
