--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="carousel-caption d-none d-md-block">
           <!--<h3 class="display-4"></h3>
           <p class="lead">This is a description for the first slide.</p> -->
-          <h6 href="#" class="w3-xxlarge w3-button w3-white w3-border w3-round-large">Nomi Bobi</h6>
+          <a href="nomibobi.html" class="btn w3-xxlarge w3-button w3-white w3-border w3-round-large">Nomi Bobi</a>
         </div>
       </div>
       <!-- Slide Two - Set the background image for this slide in the line below -->
@@ -67,7 +67,7 @@
         <div class="carousel-caption d-none d-md-block">
           <!--<h3 class="display-4">Code211</h3>
           <p class="lead">This is a description for the third slide.</p> -->
-          <h6 href="#" class="w3-xxlarge w3-button w3-white w3-border w3-round-large">Code211</h6>
+          <a href="code211.html" class="btn w3-xxlarge w3-button w3-white w3-border w3-round-large">Code211</a>
         </div>
       </div>
       <!-- Slide Three - Set the background image for this slide in the line below -->
@@ -75,7 +75,7 @@
         <div class="carousel-caption d-none d-md-block">
           <!--<h3 class="display-4">Teaching Chinese</h3>
           <p class="lead">This is a description for the second slide.</p> -->
-          <h6 href="#" class="w3-xxlarge w3-button w3-white w3-border w3-round-large">Teaching Chinese</h6>
+          <a href="chinese.html" class="btn w3-xxlarge w3-button w3-white w3-border w3-round-large">Teaching Chinese</a>
         </div>
       </div>
     </div>
