--- a/service.html
+++ b/service.html
@@ -55,14 +55,14 @@
       <!-- Project One -->
       <div class="row">
         <div class="col-md-7">
-          <a href="#">
+          <a href="nomibobi.html">
             <img class="img-fluid rounded mb-3 mb-md-0" src="img/nb-jo.jpg" alt="Nomi Bobi">
           </a>
         </div>
         <div class="col-md-5">
-          <h3>Nomi Bobi</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-          <a class="btn btn-primary" href="#">View Project</a>
+          <h3 class="title">Nomi Bobi</h3>
+          <p>Launched in 2016, <a href = "https://nomibobi.com">Nomi Bobi</a> is a 501(c)(3) dedicated to promoting mental health awareness through sales of handmade owl decorations. Nomi Bobi has donated all of its proceeds to support mental health organizations and is committed to its advocacy efforts through community engagements.</p>
+          <a class="btn btn-primary" href="nomibobi.html">View More</a>
         </div>
       </div>
       <!-- /.row -->
@@ -72,14 +72,14 @@
       <!-- Project Two -->
       <div class="row">
         <div class="col-md-7">
-          <a href="#">
+          <a href="code211.html">
             <img class="img-fluid rounded mb-3 mb-md-0" src="img/c211-lg.jpg" alt="Code211">
           </a>
         </div>
         <div class="col-md-5">
-          <h3>Code211</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-          <a class="btn btn-primary" href="#">View Project</a>
+          <h3 class="title">Code211</h3>
+          <p>From February 1st-2nd, 2019, Township High School District 211's second annual <a href = "https://code211.org">Code211</a> was a success. Serving over 100 students across the five schools, the student-run hackathon and workshops event promoted computer science education. The executive board was led by Maegan Jong who coordinated over 20 student representatives and collaborated with high school administrators to make the event a reality.</p>
+          <a class="btn btn-primary" href="code211.html">View More</a>
         </div>
       </div>
       <!-- /.row -->
@@ -89,14 +89,14 @@
       <!-- Project Three -->
       <div class="row">
         <div class="col-md-7">
-          <a href="#">
+          <a href="chinese.html">
             <img class="img-fluid rounded mb-3 mb-md-0" src="img/tc-lg.jpg" alt="Teaching Chinese">
           </a>
         </div>
         <div class="col-md-5">
-          <h3>Teaching Chinese</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-          <a class="btn btn-primary" href="#">View Project</a>
+          <h3 class="title">Teaching Chinese</h3>
+          <p>Over the summer of 2016, Maegan designed and taught a Chinese language and culture curriculum for seniors at a local retirement center. Maegan not only taught vocabulary and basic phrases but also incorporated lessons about Chinese holidays and traditions. Featured in <a href="https://www.dailyherald.com/article/20161010/submitted/161019910/" target = "_blank"><i>Daily Herald</i></a> and <a href="https://patch.com/illinois/arlingtonheights/amp/26716429/teaching-and-learning-at-all-ages-friendship-village-residents-learn-mandarin-from-teenage-instructo" target = "_blank"><i>Patch</i></a>.</p>
+          <a class="btn btn-primary" href="chinese.html">View More</a>
         </div>
       </div>
       <!-- /.row -->
