change fonts and add features and landing image

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
@@ -53,21 +54,21 @@
   </div>
 
   <hr> -->
-<body>
+<body id = "about" style="display: none;">
   <!-- Main Content -->
 
   <div class="row">
 
     <div class="col-md-6">
-      <img id = "face" class="img-fluid img" src="img/mj.jpg" alt="">
+      <img id = "face" style="display: none;" class="img-fluid img" src="img/mj.jpg" alt="">
     </div>
 
-    <div class="col-md-5 text">
-      <h3 class="title">About Maegan Jong</h3>
+    <div  id = "bio" class="col-md-5 text" style="display: none;">
+      <h3  class="title">About Maegan Jong</h3>
       <div class = "content">
       <p>Maegan is currently a first-year student at <a href="https://harvard.edu/" target = "_blank">Harvard University</a>. She is interested in leveraging technology and data to create lasting change. Her love for service developed throughout her time in high school.</p>
 
-      <p>In 2016, Maegan founded the mental health nonprofit <a href="https://nomibobi.com" target = "_blank">Nomi Bobi</a> and began her mental health advocacy efforts. Through sales of handmade Nomi Owl decorations, she raised funds to support both mental health organizations in the US and the artists in Taiwan who made them. Maegan soon grew her impact and brought mental health awareness to her high school. Collaborating with administrators, she initiated and organized a schoolwide Mental Health Presentation Day event for over 2,700 high school students. She further contributed to the cause by conducting research. During her time at Texas Tech University as a <a href="http://www.depts.ttu.edu/honors/academicsandenrichment/affiliatedandhighschool/clarks/2018Scholars/index.php" target = "_blank">Clark Scholar</a>, Maegan determined the effects of social context on the behavior of individuals with anxiety.</p>
+      <p>In 2016, Maegan founded the mental health nonprofit <a href="http://nomibobi.com" target = "_blank">Nomi Bobi</a> and began her mental health advocacy efforts. Through sales of handmade Nomi Owl decorations, she raised funds to support both mental health organizations in the US and the artists in Taiwan who made them. Maegan soon grew her impact and brought mental health awareness to her high school. Collaborating with administrators, she initiated and organized a schoolwide Mental Health Presentation Day event for over 2,700 high school students. She further contributed to the cause by conducting research. During her time at Texas Tech University as a <a href="http://www.depts.ttu.edu/honors/academicsandenrichment/affiliatedandhighschool/clarks/2018Scholars/index.php" target = "_blank">Clark Scholar</a>, Maegan determined the effects of social context on the behavior of individuals with anxiety.</p>
 
       <p>Maegan is also passionate about promoting computer science education. Leading her district’s second annual <a href="https://code211.org" target = "_blank">Code211</a> hackathon and workshops, Maegan coordinated over 20 student representatives and collaborated with high school administrators to make the event a reality. Over 100 students across the five schools attended.</p>
 
@@ -83,7 +84,7 @@
   <header class="masthead" >
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div id = "award" style="display: none;" class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h3 class="title">Awards</h3>
             <div class="col-md-12 content">
