--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
@@ -47,31 +49,58 @@
   </header>-->
 
   <header>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="display: none;">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1" ></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
       <!-- Slide One - Set the background image for this slide in the line below -->
-      <div class="carousel-item active" style="background-image: url('img/nb-jo.jpg')">
+      <div class="carousel-item active" style="background-image: url('img/mj-index.jpg')">
+          <div class="biotext-block">
+          <p>Hi! I'm Maegan.</p>
+          </div>
+
+          <div class="bio2text-block">
+          <p>Thanks for stopping by.</p>
+          </div>
+        <div class="carousel-caption d-none d-md-block">
+          <!--<h3 class="display-4"></h3>
+          <p class="lead">This is a description for the first slide.</p> -->
+
+        </div>
+      </div>
+
+      <!-- Slide Two - Set the background image for this slide in the line below -->
+      <div class="carousel-item" style="background-image: url('img/nb-jo.jpg')">
+          <div class="nbtext-block">
+          <p>Mental Health Advocacy</p>
+          </div>
         <div class="carousel-caption d-none d-md-block">
           <!--<h3 class="display-4"></h3>
           <p class="lead">This is a description for the first slide.</p> -->
           <a href="nomibobi.html" class="btn w3-xxlarge w3-button w3-white w3-border w3-round-large">Nomi Bobi</a>
         </div>
       </div>
-      <!-- Slide Two - Set the background image for this slide in the line below -->
+      <!-- Slide Three - Set the background image for this slide in the line below -->
       <div class="carousel-item" style="background-image: url('img/c211-lg.jpg')">
+        <div class="c211text-block">
+        <p>Hackathon</p>
+        </div>
         <div class="carousel-caption d-none d-md-block">
+
           <!--<h3 class="display-4">Code211</h3>
           <p class="lead">This is a description for the third slide.</p> -->
           <a href="code211.html" class="btn w3-xxlarge w3-button w3-white w3-border w3-round-large">Code211</a>
         </div>
       </div>
-      <!-- Slide Three - Set the background image for this slide in the line below -->
+      <!-- Slide Four - Set the background image for this slide in the line below -->
       <div class="carousel-item" style="background-image: url('img/tc-lg.jpg')">
+        <div class="chinesetext-block">
+        <p>Communications & Culture</p>
+        </div>
         <div class="carousel-caption d-none d-md-block">
           <!--<h3 class="display-4">Teaching Chinese</h3>
           <p class="lead">This is a description for the second slide.</p> -->
@@ -88,6 +117,7 @@
           <span class="sr-only">Next</span>
         </a>
   </div>
+
 </header>
 
 
