--- a/service.html
+++ b/service.html
@@ -15,6 +15,8 @@
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
@@ -53,7 +55,7 @@
       </h1>-->
 
       <!-- Project One -->
-      <div class="row">
+      <div class="row" id="proj1" style="display: none;">
         <div class="col-md-7">
           <a href="nomibobi.html">
             <img class="img-fluid rounded mb-3 mb-md-0" src="img/nb-jo.jpg" alt="Nomi Bobi">
@@ -61,8 +63,10 @@
         </div>
         <div class="col-md-5">
           <h3 class="title">Nomi Bobi</h3>
-          <p>Launched in 2016, <a href = "https://nomibobi.com">Nomi Bobi</a> is a 501(c)(3) dedicated to promoting mental health awareness through sales of handmade owl decorations. Nomi Bobi has donated all of its proceeds to support mental health organizations and is committed to its advocacy efforts through community engagements.</p>
+          <div class = "content">
+          <p>Launched in 2016, <a href = "http://nomibobi.com" target = "_blank">Nomi Bobi</a> is a 501(c)(3) dedicated to promoting mental health awareness through sales of handmade owl decorations. Nomi Bobi has donated all of its proceeds to support mental health organizations and is committed to its advocacy efforts through community engagements.</p>
           <a class="btn btn-primary" href="nomibobi.html">View More</a>
+          </div>
         </div>
       </div>
       <!-- /.row -->
@@ -70,7 +74,7 @@
       <hr>
 
       <!-- Project Two -->
-      <div class="row">
+      <div class="row" id="proj2" style="display: none;">
         <div class="col-md-7">
           <a href="code211.html">
             <img class="img-fluid rounded mb-3 mb-md-0" src="img/c211-lg.jpg" alt="Code211">
@@ -78,8 +82,10 @@
         </div>
         <div class="col-md-5">
           <h3 class="title">Code211</h3>
-          <p>From February 1st-2nd, 2019, Township High School District 211's second annual <a href = "https://code211.org">Code211</a> was a success. Serving over 100 students across the five schools, the student-run hackathon and workshops event promoted computer science education. The executive board was led by Maegan Jong who coordinated over 20 student representatives and collaborated with high school administrators to make the event a reality.</p>
+          <div class = "content">
+          <p>In February 2019, Township High School District 211's second annual <a href = "https://code211.org" target = "_blank">Code211</a> was a success. Serving over 100 students across the five schools, the student-run hackathon and workshops event promoted computer science education. The executive board was led by Maegan who coordinated over 20 student representatives and collaborated with high school administrators to make the event a reality.</p>
           <a class="btn btn-primary" href="code211.html">View More</a>
+        </div>
         </div>
       </div>
       <!-- /.row -->
@@ -87,7 +93,7 @@
       <hr>
 
       <!-- Project Three -->
-      <div class="row">
+      <div class="row" id="proj3" style="display: none;">
         <div class="col-md-7">
           <a href="chinese.html">
             <img class="img-fluid rounded mb-3 mb-md-0" src="img/tc-lg.jpg" alt="Teaching Chinese">
@@ -95,8 +101,10 @@
         </div>
         <div class="col-md-5">
           <h3 class="title">Teaching Chinese</h3>
-          <p>Over the summer of 2016, Maegan designed and taught a Chinese language and culture curriculum for seniors at a local retirement center. Maegan not only taught vocabulary and basic phrases but also incorporated lessons about Chinese holidays and traditions. Featured in <a href="https://www.dailyherald.com/article/20161010/submitted/161019910/" target = "_blank"><i>Daily Herald</i></a> and <a href="https://patch.com/illinois/arlingtonheights/amp/26716429/teaching-and-learning-at-all-ages-friendship-village-residents-learn-mandarin-from-teenage-instructo" target = "_blank"><i>Patch</i></a>.</p>
+          <div class = "content">
+          <p>Over the summer of 2016, Maegan designed and taught a Chinese language and culture curriculum for seniors at a local retirement center. The class not only taught vocabulary and basic phrases but also incorporated lessons about Chinese holidays and traditions. Featured in <a href="https://www.dailyherald.com/article/20161010/submitted/161019910/" target = "_blank"><i>Daily Herald</i></a> and <a href="https://patch.com/illinois/arlingtonheights/amp/26716429/teaching-and-learning-at-all-ages-friendship-village-residents-learn-mandarin-from-teenage-instructo" target = "_blank"><i>Patch</i></a>.</p>
           <a class="btn btn-primary" href="chinese.html">View More</a>
+          </div>
         </div>
       </div>
       <!-- /.row -->
