Further edit landing page

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
       <!-- Slide One - Set the background image for this slide in the line below -->
       <div class="carousel-item active" style="background-image: url('img/mj-index.jpg')">
           <div class="biotext-block">
-          <p>Hi! I'm Maegan.</p>
+          <p id="subtitle">Hi! I'm Maegan.</p>
           </div>
 
           <div class="bio2text-block">
-          <p>Thanks for stopping by.</p>
+          <p id="subtitle">Thanks for stopping by.</p>
           </div>
         <div class="carousel-caption d-none d-md-block">
           <!--<h3 class="display-4"></h3>
