Edits to fade in

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body>
+
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -48,7 +48,10 @@
     </div>
   </header>-->
 
-  <header>
+  <body id="index" style="display: none;">
+
+  <header >
+
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="display: none;">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
