--- a/service.html
+++ b/service.html
@@ -25,12 +25,14 @@
 
 </head>
 
-<body>
+
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
 
   </nav>
+
+  <body id="service" style="display: none;">
 
   <!-- Page Header -->
   <header class="masthead" >
