edit the size of fonts

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   </nav>
 
-  <!-- Page Header -->
+  <!-- Page Header
   <header class="masthead" >
     <div class="container">
       <div class="row">
@@ -41,7 +41,7 @@
         </div>
       </div>
     </div>
-  </header>
+  </header> -->
 
   <!-- Old Main Content <div class="container">
     <div class="row">
@@ -57,7 +57,7 @@
 <body id = "about" style="display: none;">
   <!-- Main Content -->
 
-  <div class="row">
+  <div class="row below-nav">
 
     <div class="col-md-6">
       <img id = "face" style="display: none;" class="img-fluid img" src="img/mj.jpg" alt="">
