--- a/chinese.html
+++ b/chinese.html
@@ -31,20 +31,7 @@
   </nav>
 
 
-  <!-- Page Header -->
-  <header class="masthead" >
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1 class="title"></h1>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <h1 class="servicetitle">Teaching Chinese</h1>
+  <h1 class="servicetitle  below-nav">Teaching Chinese</h1>
 
   <!-- Pagination -->
   <div class="row">
