--- a/nomibobi.html
+++ b/nomibobi.html
@@ -30,21 +30,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   </nav>
 
-
-  <!-- Page Header -->
-  <header class="masthead" >
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1 class="title"></h1>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <h1 class="servicetitle">Nomi Bobi</h1>
+  <h1 class="servicetitle  below-nav">Nomi Bobi</h1>
 
   <!-- Pagination -->
   <div class="row">
