--- a/service.html
+++ b/service.html
@@ -34,22 +34,11 @@
 
   <body id="service" style="display: none;">
 
-  <!-- Page Header -->
-  <header class="masthead" >
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1></h1>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
+
 
 
   <!-- Page Content -->
-    <div class="container">
+    <div class="container  below-nav">
 
       <!-- Page Heading
       <h1 class="my-4">Page Heading
