--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
       <!-- Slide One - Set the background image for this slide in the line below -->
       <div class="carousel-item active" style="background-image: url('img/mj-index.jpg')">
 
-          <div class="biotext-block">
+          <div class="biotext-block text-block">
 
         <p id="subtitle">Hi! I'm Maegan.</p>
 
         </div>
 
-          <div class="bio2text-block">
+          <div class="bio2text-block text-block">
           <p id="subtitle">Thanks for stopping by.</p>
           </div>
         <div class="carousel-caption d-none d-md-block">
@@ -81,7 +81,7 @@
 
       <!-- Slide Two - Set the background image for this slide in the line below -->
       <div class="carousel-item" style="background-image: url('img/nb-jo.jpg')">
-          <div class="nbtext-block">
+          <div class="nbtext-block text-block">
 
           <p>Mental Health Advocacy</p>
 
@@ -94,7 +94,7 @@
       </div>
       <!-- Slide Three - Set the background image for this slide in the line below -->
       <div class="carousel-item" style="background-image: url('img/c211-lg.jpg')">
-        <div class="c211text-block">
+        <div class="c211text-block text-block">
         <p>Hackathon</p>
         </div>
         <div class="carousel-caption d-none d-md-block">
@@ -106,7 +106,7 @@
       </div>
       <!-- Slide Four - Set the background image for this slide in the line below -->
       <div class="carousel-item" style="background-image: url('img/tc-lg.jpg')">
-        <div class="chinesetext-block">
+        <div class="chinesetext-block text-block">
         <p>Communications & Culture</p>
         </div>
         <div class="carousel-caption d-none d-md-block">
