Speed of stream

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
 <meta name="author" content="Daniel Łaś">
-<title>Daniel Łaś Tech Blog</title>
+<title>Daniel Łaś Tech Blog - about me. This is what I do.</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -53,7 +53,7 @@
 			<div class="row">
 				<div class="col-md-10 mx-auto">
 					<div class="page-heading">
-						<h1>About Me</h1>
+						<h1>About me</h1>
 						<span class="subheading">This is what I do.</span>
 					</div>
 				</div>
