--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Functional Programming, Java, JavaScript, Software Architecture, Software Craftsmanship, Clean Code">
 <meta name="author" content="Daniel Łaś">
-<title>Daniel Łaś Tech Blog</title>
+<title>Daniel Łaś Tech Blog - Functional Programming, Java, JavaScript, Software Architecture, Software Craftsmanship, Clean Code</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
