--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="">
+<meta name="description" content="Daniel Łaś - about me">
 <meta name="author" content="Daniel Łaś">
 <title>Daniel Łaś Tech Blog - about me. This is what I do.</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
