--- a/about.html
+++ b/about.html
@@ -63,10 +63,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-10 mx-auto">
-				<p>I'm coding software architect with solid management background.</p>
-				<blockquote class="blockquote text-center">At the bottom of my heart, I'm the programmer.</blockquote>
-				<p>I have been programming professionally for over 25 years. I'm most experienced in JVM ecosystem (Java programming language) but I'm not stranger to
-					modern JavaScript Web development and DevOps related issues.</p>
+				<p>I'm coding software architect with solid management background. I have been crafting software professionally for over 25 years. I'm most experienced
+					in JVM ecosystem (Java programming language) but I'm not stranger to modern JavaScript Web development and DevOps related issues.</p>
 				<p>Several years ago something important happened to me - I met functional programming. It changed my perspective so much, that I don't want to get back
 					to my old habits.</p>
 			</div>
@@ -79,15 +77,15 @@
 				<div class="col-lg-8 col-md-10 mx-auto">
 					<ul class="list-inline text-center">
 						<li class="list-inline-item">
-							<a href="https://www.linkedin.com/in/daniel-las" target="_blank">
-								<span class="fa-stack fa-lg"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
-								</span>
+							<a href="https://www.linkedin.com/in/daniel-las" target="_blank"> <span class="fa-stack fa-lg"> <i class="fas fa-circle fa-stack-2x"></i> <i
+									class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+							</span>
 							</a>
 						</li>
 					</ul>
 					<p class="copyright text-muted">
-						Copyright &copy; Daniel Łaś 2019, Look and feel forked from
-						<a href="https://startbootstrap.com/template-overviews/clean-blog/" target="blank">Clean Blog</a>
+						Copyright &copy; Daniel Łaś 2019, Look and feel forked from <a href="https://startbootstrap.com/template-overviews/clean-blog/" target="blank">Clean
+							Blog</a>
 					</p>
 				</div>
 			</div>
